--- a/index.html
+++ b/index.html
@@ -18,34 +18,34 @@
 </div>
 
   <div class="paper">
-<p>Pero por ti,<br> Podría serlo unas veces más
+<p>But for you,<br> I could be that a few more times.
 </p> 
 </div>
 <div class="paper">
-  <p>Puedo decir que sigo odiando</p>
-    <p> a los tipos cursis y románticos. </p>
+  <p>I can still say I hate</p>
+    <p> all those cheesy, romantic guys. </p>
  
 </div>
 
 <div class="paper">
-  <p>Pero en esos momentos</p>
-   <p>En los que estás cerca de mí,<br> o en los que te dibujo en mi mente...</p>
+  <p>But in those moments</p>
+   <p>when you're close to me,<br> or when I draw you in my mind...</p>
 </div>
 
 
 
 <div class="paper red">
-<p class="p1">Y ahora, después de todo este tiempo,</p>
-<p class="p2">tengo un problema: no llegaré a saber por qué, ni cómo... y tal vez nunca.</p>
+<p class="p1">And now, after all this time,</p>
+<p class="p2">I’ve got a problem: I’ll never know why, or how... and maybe never will.</p>
 </div>
 
 <div class="paper">
-<p class="p1">Como sabes, siempre he odiado</p>
-  <p class="p1">a los tipos románticos y cursis<span style="color: red !important;"></span></p>
+<p class="p1">As you know, I’ve always hated</p>
+  <p class="p1">romantic and sentimental types<span style="color: red !important;"></span></p>
 </div>
 
 <div class="paper">
-<p class="p1">Hola Franci! Toca los papelitos para moverlos</p>
+<p class="p1">Hey Franci! Touch the notes to move them.</p>
 </div>
 <!-- for desktop use cript.js -->
 <!-- <script src="js/script.js"></script>  -->
@@ -55,5 +55,6 @@
 
 </body>
 </html>
+
 
 
